--- a/src/scss/components/ContentView.scss
+++ b/src/scss/components/ContentView.scss
@@ -1,5 +1,6 @@
 @use "../Main" as Main;
 
+
 .contentView{
   width: 100%;
   margin-right:var(--edge-margin);
@@ -20,8 +21,8 @@
       background: var(--background-primary);
       z-index: 10!important;
       position: relative;
-      align-items: flex-end;
       margin-right: 4px;
+      align-items: flex-start;
     }
   }
 }
@@ -29,13 +30,14 @@
 // Content card
 .cgb-0{
   margin-top: var(--box-margin);
-  border: Main.$cardBorder;
   height: fit-content;
   margin-right:2px;
   margin-left: 2px;
 
   .cgb-0-txt{
     padding: var(--box-margin);
+    margin:2px;
+    border: 1px solid var(--border-primary);
     width: 100%;
     height: 100%;
     min-height: 100%;
@@ -45,8 +47,12 @@
   }
 
   .vue-load-image{
+    display: flex;
+    justify-content: flex-start;
     .thumbnail {
-      width: 100%;
+      border: 1px solid var(--border-primary);
+      padding: 2px;
+      max-width: 100%;
       max-height: inherit;
       object-fit: contain;
     }
@@ -106,7 +112,6 @@
 .os-scrollbar-vertical .os-scrollbar-handle {
     width: 2px!important;
     transition: none!important;
-    right: 2px;
 }
 
 .os-scrollbar-vertical .os-scrollbar-handle {
@@ -119,7 +124,7 @@
 }
 .os-scrollbar-track {
     padding: 0 !important;
-    width: 4px!important;
+    width: 3px!important;
 }
 .os-scrollbar-vertical {
     padding: 0 !important;
