--- a/src/scss/helpers/Search.scss
+++ b/src/scss/helpers/Search.scss
@@ -1,6 +1,6 @@
 .search{
   border: 1px solid var(--border-primary);
-  margin: 2px;
+  margin: var(--base-spacing);
   margin-bottom: 0;
 
   .input-standard {
