--- a/src/scss/Theme.scss
+++ b/src/scss/Theme.scss
@@ -4,7 +4,7 @@
 
 .theme-dark {
   --base-spacing: 2px;
-  --edge-margin: 2px;
+  --edge-margin: var(--base-spacing);
   --color-scheme: dark;
   --background-primary: #111111;
   --background-tilt: #111111;
@@ -41,7 +41,8 @@
 }
 
 .theme-light {
-  --edge-margin: 2px;
+  --base-spacing: 2px;
+  --edge-margin: var(--base-spacing);
   --color-scheme: light;
   --background-primary: #f5f5f5;
   --background-tilt: #f5f5f5;
