--- a/src/scss/components/ContentView.scss
+++ b/src/scss/components/ContentView.scss
@@ -31,12 +31,12 @@
 .cgb-0{
   margin-top: var(--box-margin);
   height: fit-content;
-  margin-right:2px;
-  margin-left: 2px;
+  margin-right:var(--base-spacing);
+  margin-left: var(--base-spacing);
 
   .cgb-0-txt{
     padding: var(--box-margin);
-    margin:2px;
+    margin:var(--base-spacing);
     border: 1px solid var(--border-primary);
     width: 100%;
     height: 100%;
@@ -51,7 +51,7 @@
     justify-content: flex-start;
     .thumbnail {
       border: 1px solid var(--border-primary);
-      padding: 2px;
+      padding: var(--base-spacing);
       max-width: 100%;
       max-height: inherit;
       object-fit: contain;
@@ -67,7 +67,7 @@
     max-width: 100%;
     overflow: hidden;
     height: fit-content!important;
-    padding: 2px;
+    padding: var(--base-spacing);
     white-space: nowrap;
     opacity: 0.8;
   }
@@ -110,7 +110,7 @@
     border-radius: 0!important;
 }
 .os-scrollbar-vertical .os-scrollbar-handle {
-    width: 2px!important;
+    width: var(--base-spacing)!important;
     transition: none!important;
 }
 
