--- a/src/scss/helpers/Settings.scss
+++ b/src/scss/helpers/Settings.scss
@@ -6,11 +6,11 @@
     height: fit-content;
     width: 100%;
     flex-direction: column;
-    padding: 2px;
+    padding: var(--base-spacing);
 
   .input-standard {
     border: 1px solid var(--border-primary);
-    margin-bottom: 2px;
+    margin-bottom: var(--base-spacing);
     outline:0;
     background-color: rgba(0,0,0,0);
   }
