--- a/src/scss/helpers/UploadBox.scss
+++ b/src/scss/helpers/UploadBox.scss
@@ -121,7 +121,7 @@
       width:50%;
       text-align: center;
       font-size:13px;
-      padding:2px;
+      padding:var(--base-spacing);
     }
     .option:last-child{
       border-left: 1px solid var(--border-primary);
