--- a/src/scss/components/LightBox.scss
+++ b/src/scss/components/LightBox.scss
@@ -1,189 +1,190 @@
-.lightbox{
-  position:absolute!important;
+.lightbox {
+  position: absolute !important;
   pointer-events: none;
   background: none !important;
-  width:70svw;
+  width: 70svw;
   height: 70svh;
   top: 0;
   left: 0;
 }
 
-  .resizable-component{
-    position:absolute;
-    pointer-events:auto;
-    padding: 0;
-    border: 1px solid var(--border-primary);
-    background: var(--background-lightbox);
-    backdrop-filter: blur(20px);
-    font-weight: normal;
-    z-index:20!important;
-    height: 100svh;
-    width: 100svw;
+.resizable-component {
+  position: absolute;
+  pointer-events: auto;
+  padding: 0;
+  border: 1px solid var(--border-primary);
+  background: var(--background-lightbox);
+  backdrop-filter: blur(20px);
+  font-weight: normal;
+  z-index: 20 !important;
+  height: 100svh;
+  width: 100svw;
 
-    .block {
-      position:relative;
-      z-index:10!important;
-      width:100%;
-      height:100%;
-      max-width: 100%;
-      max-height: 100%;
-      overflow:hidden;
-      display: flex;
-      align-items: flex-end;
-      flex-direction: column;
-      justify-content: flex-end;
+  .block {
+    position: relative;
+    z-index: 10 !important;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    justify-content: flex-end;
 
-      .pdf{
-        position:relative;
-        width:100%;
-        height:100%;
-        max-height: calc(100% );
-        white-space: pre-wrap;
-      }
-
-      .uploader{
-        position:relative;
-        min-height: calc(100% - 32px);
-        width:100%;
-        max-width:100%;
-        height: calc(100% - 32px);
-        white-space: pre-wrap;
-        overflow-y:auto;
-
-        #fileSelect{
-          position:absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-
-          .file-upload{
-            max-width: 163px;
-          }
-
-          input::file-selector-button {
-            text-rendering: initial;
-            font-family: "ＭＳ Ｐゴシック";
-            font-weight:400;
-            color: var(--text-primary);
-            text-decoration: none;
-            border:0;
-            background: none;
-          }
-        }
-
-        button{
-          border:0;
-          background:none;
-        }
-
-
-      }
-
-      .pdf{
-        position:relative;
-        width:100%;
-        height:100%;
-        max-height: calc(100% - 27px);
-
-        .VuePdfApp{
-          max-width: 100%;
-          max-height: 100%;
-          width: 100%;
-          height:100%;
-        }
-      }
-
-      .vue-load-image{
-        width:100%;
-        height:100%;
-        max-height: calc(100% );
-        max-width: calc(100% );
-        white-space: pre-wrap;
-        overflow-y:hidden;
-
-        img {
-          position:relative;
-          max-width: 100%;
-          max-height: calc(100% );
-          width: 100%;
-          height: calc(100%);
-          object-fit: contain;
-        }
-      }
-
-      .drag-container-1 {
-        width: 100%;
-        height: 30px;
-        text-align: center;
-        cursor: pointer;
-        z-index:10!important;
-        border-top:1px solid var(--border-primary);
-        display:flex;
-        a {
-          color: var(--link)
-        }
-        a:link {
-          color:  var(--link)
-        }
-        a:visited {
-          color:  var(--link)
-        }
-        .navItem{
-          color: var(--text-header);
-          text-align: center;
-          font-size:14pt;
-          flex-grow: 1;
-          padding-right:1px;
-          padding-left:1px;
-          border-right:1px solid var(--border-primary);
-        }
-        .navItem:last-child{
-          border-right:0;
-        }
-      }
-
+    .pdf {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      max-height: calc(100%);
+      white-space: pre-wrap;
     }
-  }
 
+    .uploader {
+      position: relative;
+      min-height: calc(100% - 32px);
+      width: 100%;
+      max-width: 100%;
+      height: calc(100% - 32px);
+      white-space: pre-wrap;
+      overflow-y: auto;
 
+      #fileSelect {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
-.txt{
-  max-height: calc(100cqh - 30px) !important;
-  position: inherit !important;
+        .file-upload {
+          max-width: 163px;
+        }
 
-  div{
-    max-width: 700px;
-    margin: 0 auto;
+        input::file-selector-button {
+          text-rendering: initial;
+          font-family: 'ＭＳ Ｐゴシック';
+          font-weight: 400;
+          color: var(--text-primary);
+          text-decoration: none;
+          border: 0;
+          background: none;
+        }
+      }
 
-    .tiptap{
-      margin:25px;
-      height:100%;
-      overflow-y:auto;
+      button {
+        border: 0;
+        background: none;
+      }
+    }
 
-      p{
-        margin:0;
+    .pdf {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      max-height: calc(100% - 27px);
+
+      .VuePdfApp {
+        max-width: 100%;
+        max-height: 100%;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .vue-load-image {
+      width: 100%;
+      height: 100%;
+      max-height: calc(100%);
+      max-width: calc(100%);
+      white-space: pre-wrap;
+      overflow-y: hidden;
+
+      img {
+        position: relative;
+        max-width: 100%;
+        max-height: calc(100%);
+        width: 100%;
+        height: calc(100%);
+        object-fit: contain;
+      }
+    }
+
+    .drag-container-1 {
+      width: 100%;
+      height: 30px;
+      text-align: center;
+      cursor: pointer;
+      z-index: 10 !important;
+      border-top: 1px solid var(--border-primary);
+      display: flex;
+
+      a {
+        color: var(--link);
+      }
+
+      a:link {
+        color: var(--link);
+      }
+
+      a:visited {
+        color: var(--link);
+      }
+
+      .navItem {
+        color: var(--text-header);
+        text-align: center;
+        font-size: 14pt;
+        flex-grow: 1;
+        padding-right: 1px;
+        padding-left: 1px;
+        border-right: 1px solid var(--border-primary);
+      }
+
+      .navItem:last-child {
+        border-right: 0;
       }
     }
   }
 }
-        #textEditor{
-          position:relative;
-          min-height:80%;
-          max-height: calc(100cqh - 30px) !important;
-          container-type: size;
 
-          .tiptap{
-            position:relative;
-            height: calc(100cqh - 50px);
-          }
-        }
+.txt {
+  max-height: calc(100cqh - 30px) !important;
+  position: inherit !important;
 
-#savekernal{
-  position:fixed;
+  div {
+    max-width: 700px;
+    margin: 0 auto;
+
+    .tiptap {
+      margin: 25px;
+      height: 100%;
+      overflow-y: auto;
+
+      p {
+        margin: 0;
+      }
+    }
+  }
+}
+
+#textEditor {
+  position: relative;
+  min-height: 80%;
+  max-height: calc(100cqh - 30px) !important;
+  container-type: size;
+
+  .tiptap {
+    position: relative;
+    height: calc(100cqh - 50px);
+  }
+}
+
+#savekernal {
+  position: fixed;
   right: 0;
-  top:0;
-  z-index:1;
-  border:1px solid var(--border-primary);
+  top: 0;
+  z-index: 1;
+  border: 1px solid var(--border-primary);
   color: var(--text-header);
   text-align: center;
   width: 100px;
@@ -193,134 +194,134 @@
   backdrop-filter: blur(20px);
 }
 
-  /* for dark theme */
-  .pdf-app.dark {
-    --pdf-toolbar-color: black;
-    --pdf-app-background-color:black;
-    --pdf-loading-bar-color:rgba(194, 194, 73, 0.973);
-  }
-  /* for light theme */
-  .pdf-app.light {
-    --pdf-toolbar-color: white;
-  }
+/* for dark theme */
+.pdf-app.dark {
+  --pdf-toolbar-color: black;
+  --pdf-app-background-color: black;
+  --pdf-loading-bar-color: rgba(194, 194, 73, 0.973);
+}
+
+/* for light theme */
+.pdf-app.light {
+  --pdf-toolbar-color: white;
+}
 
 .lightbox-info {
   background: var(--background-lightbox);
-  position:absolute;
+  position: absolute;
   border: 1px solid var(--border-primary);
   backdrop-filter: blur(20px);
   bottom: 50px;
   left: 50%;
   transform: translate(-50%, -0);
   width: 90%;
-  max-width:800px;
+  max-width: 800px;
   height: 40%;
   max-height: 480px;
-  display:flex;
+  display: flex;
 
-  .mixCol{
-    display:flex;
-    width:60%;
-    height:100%;
+  .mixCol {
+    display: flex;
+    width: 60%;
+    height: 100%;
 
-    .select-mix{
-      height:100%;
-      width:50%;
-      border-left:1px solid var(--border-primary);
-      width:50%;
+    .select-mix {
+      height: 100%;
+      width: 50%;
+      border-left: 1px solid var(--border-primary);
+      width: 50%;
     }
   }
 
-  .infoCol{
-    border:1px solid var(--border-mix);
-    width:39%;
-    height:calc(100% - 8px);
-    margin:var(--box-margin);
-    padding:var(--box-margin);
+  .infoCol {
+    border: 1px solid var(--border-mix);
+    width: 39%;
+    height: calc(100% - 8px);
+    margin: var(--box-margin);
+    padding: var(--box-margin);
     overflow: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-  .infoBox{
-      width:100%;
+    .infoBox {
+      width: 100%;
       overflow: hidden;
       min-height: 16px;
       white-space: pre-wrap;
-      display:block;
+      display: block;
       white-space: nowrap;
       display: block;
       text-overflow: ellipsis;
 
-      .info-title{
+      .info-title {
         color: var(--text-header);
       }
     }
   }
 
- .p-dataview{
-    height:100%;
-    width:100%;
-    position:relative;
-    z-index:5;
-    max-height:calc(100% );
-    overflow-y:auto;
-    overflow-x:hidden;
+  .p-dataview {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    z-index: 5;
+    max-height: calc(100%);
+    overflow-y: auto;
+    overflow-x: hidden;
 
-    .p-dataview-content{
-      height:100%;
-      width:100%;
-      padding-top:4px;
+    .p-dataview-content {
+      height: 100%;
+      width: 100%;
+      padding-top: 4px;
       z-index: 10;
       position: sticky;
 
-        .dgb-0:last-child{
-          margin-bottom:40px;
+      .dgb-0:last-child {
+        margin-bottom: 40px;
+      }
+
+      .dgb-0 {
+        position: relative;
+        cursor: pointer;
+        height: fit-content;
+        padding: 3px;
+        overflow: hidden;
+        border: 1px solid var(--border-mix);
+        width: 100%;
+        margin: 4px;
+        margin-top: 0;
+        margin-bottom: 1px;
+
+        #open-mix {
+          margin-left: 5px;
+          width: 30px;
         }
 
-        .dgb-0{
-          position: relative;
+        .dgb-0-txt {
           cursor: pointer;
-          height:fit-content;
-          padding:3px;
-          overflow:hidden;
-          border:1px solid var(--border-mix);
-          width:100%;
-          margin: 4px;
-          margin-top:0;
-          margin-bottom:1px;
+          width: 100%;
+          margin: 0;
+          border: 0;
+          user-select: none;
+          background: none;
+          overflow: hidden;
 
-          #open-mix{
-            margin-left: 5px;
-            width:30px;
+          .descr {
+            color: var(--text-data-title);
+            opacity: 0.5;
+            font-size: 12px;
           }
 
-          .dgb-0-txt{
-            cursor: pointer;
-            width:100%;
-            margin: 0;
-            border:0;
-            user-select: none;
-            background:none;
+          a {
+            color: var(--text-data-title);
+            font-size: 16px;
+            text-align: left;
+            text-overflow: ellipsis;
             overflow: hidden;
-
-            .descr{
-              color:var(--text-data-title);
-              opacity:.50;
-              font-size:12px;
-            }
-            a{
-              color:var(--text-data-title);
-              font-size:16px;
-              text-align:left;
-              text-overflow: ellipsis;
-              overflow: hidden;
-              white-space: nowrap;
-            }
+            white-space: nowrap;
           }
+        }
       }
     }
   }
 }
-
-
