--- a/src/scss/helpers/ProgressBar.scss
+++ b/src/scss/helpers/ProgressBar.scss
@@ -1,14 +1,15 @@
-.p-progressbar{
-  width: 100dvw!important;
+.p-progressbar {
+  width: 100dvw !important;
   height: 4px;
-  position:absolute!important;
-  bottom:0;
-  z-index:540;
+  position: absolute !important;
+  bottom: 0;
+  z-index: 540;
 
-  .p-progressbar-value{
-    background:var(--text-data-title)
+  .p-progressbar-value {
+    background: var(--text-data-title);
   }
-  .p-progressbar-label{
-    opacity:0;
+
+  .p-progressbar-label {
+    opacity: 0;
   }
 }
