--- a/src/scss/components/MixtapeView.scss
+++ b/src/scss/components/MixtapeView.scss
@@ -51,6 +51,7 @@
       border-bottom: 1px solid var(--border-primary) !important;
       border-top: 1px solid var(--border-primary) !important;
       border-radius: 0 !important;
+      height: calc(100% - (2 * var(--base-spacing))) !important;
     }
   }
 
