--- a/src/scss/components/SessionManager.scss
+++ b/src/scss/components/SessionManager.scss
@@ -1,105 +1,107 @@
-.login-form{
+.login-form {
   text-align: center;
-  width:100%;
+  width: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   position: absolute;
 
-  input[type="submit" i]{
-    padding-top:1px;
-    padding-bottom:1px;
+  input[type='submit' i] {
+    padding-top: 1px;
+    padding-bottom: 1px;
     padding-left: 6px;
-    padding-right:6px;
-    outline:0;
-    color:var(--text-login);
+    padding-right: 6px;
+    outline: 0;
+    color: var(--text-login);
   }
-  input{
-    margin:3px;
+
+  input {
+    margin: 3px;
     border: 0;
     background: #00000000;
-    outline: 1px solid  var(--border-primary);
-    font-size:16px;
-    font-weight:1;
+    outline: 1px solid var(--border-primary);
+    font-size: 16px;
+    font-weight: 1;
     border-radius: 0;
-    width:202px;
-        z-index: 20;
-            position: relative;
+    width: 202px;
+    z-index: 20;
+    position: relative;
   }
-  a{
-    font-size:20px;
-    font-weight:1;
-    color:white;
+
+  a {
+    font-size: 20px;
+    font-weight: 1;
+    color: white;
   }
 }
 
-.logout-button{
-  background:none;
-  border:none;
-  padding:0;
+.logout-button {
+  background: none;
+  border: none;
+  padding: 0;
 }
 
 .img4 {
   flex: 1.944;
 }
+
 .img5 {
   flex: 0.75;
-  margin-right:45px;
+  margin-right: 45px;
 }
-
-
 
 .splash {
   display: flex;
-  margin-top:40px;
+  margin-top: 40px;
   position: relative;
   left: 50%;
   transform: translate(-50%, -0);
-  max-width:900px;
+  max-width: 900px;
 }
 
-.splash-image{
-  margin-top:40px;
+.splash-image {
+  margin-top: 40px;
   position: relative;
   left: 50%;
   transform: translate(-50%, -0);
-  max-width:80dvw;
-}
-.splash-image-mobile{
-  margin-top:40px;
-  position: relative;
-  left: 50%;
-  transform: translate(-50%, -0);
-  max-width:20dvw;
+  max-width: 80dvw;
 }
 
-.login-overlay{
-  position:absolute;
+.splash-image-mobile {
+  margin-top: 40px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -0);
+  max-width: 20dvw;
+}
+
+.login-overlay {
+  position: absolute;
   -webkit-filter: brightness(50%) blur(3px);
-  height:900px;
-  width:auto;
-    z-index: 10;
-    top: 50%;
-    left: 50%;
-    transform: translate(-53%, -50%);
-
-
+  height: 900px;
+  width: auto;
+  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-53%, -50%);
 }
-  .login-ui{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 20;
-    width: 25%;
-    width: 210px;
 
-  }
-.login-form-submit{
+.login-ui {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 20;
+  width: 25%;
+  width: 210px;
+}
+
+.login-form-submit {
   background: none;
-  border:none;
-  width:100%;
-  img{
+  border: none;
+  width: 100%;
+
+  img {
     width: 100%;
     position: relative;
     top: -59px;
