--- a/src/scss/components/Tabs.scss
+++ b/src/scss/components/Tabs.scss
@@ -1,4 +1,4 @@
-.tabs{
+.tabs {
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -6,17 +6,17 @@
   height: -moz-fit-content;
   height: fit-content;
 
-  .tabs-l{
+  .tabs-l {
     display: flex;
     width: calc(100% - 29px);
 
     .tab {
       margin-left: var(--box-margin);
       color: var(--text-tab-header);
-
     }
   }
-  .tabs-r{
+
+  .tabs-r {
     display: flex;
     justify-content: flex-end;
 
@@ -24,7 +24,7 @@
       margin-right: var(--box-margin);
       right: 0;
 
-      .set-btn{
+      .set-btn {
         padding: var(--box-margin);
         color: var(--tab-media-icon);
         display: block;
@@ -34,12 +34,14 @@
     }
   }
 }
-.tabs-content{
-  width:calc(100%)!important;
+
+.tabs-content {
+  width: calc(100%) !important;
   flex: none;
   min-height: 4px;
   height: fit-content;
 }
+
 .tab {
   text-align: center;
   cursor: pointer;
@@ -51,25 +53,24 @@
   letter-spacing: -0.33px;
 }
 
-.tab-active{
-  opacity: 1!important;
-  z-index: 5!important;
+.tab-active {
+  opacity: 1 !important;
+  z-index: 5 !important;
   background: var(--background-primary);
 }
 
-
 .tab-icon-media {
-  filter: hue-rotate(320deg) brightness(1.35)!important;
+  filter: hue-rotate(320deg) brightness(1.35) !important;
 }
 
-.tab-content-nav{
-    height: calc(100% + 6px) !important;
-    display: flex;
-    flex-direction: column;
-    min-height: 0;
+.tab-content-nav {
+  height: calc(100% + 6px) !important;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
 }
 
-.tab-content-kernal{
+.tab-content-kernal {
   padding-bottom: var(--edge-margin);
   height: calc(100% + 6px) !important;
   margin-right: var(--edge-margin);
@@ -77,7 +78,7 @@
 }
 
 // Current Search and Mixtape info/close
-.current-dir{
+.current-dir {
   max-width: calc(100% - 35px);
   text-overflow: ellipsis;
   overflow: hidden;
@@ -86,7 +87,6 @@
   padding-bottom: 0;
 }
 
-
 .tab-icon {
   height: calc(100% - 4px);
   width: 100%;
@@ -94,22 +94,23 @@
 
 .tab-width-standard {
   width: 25px;
-  padding-top:var(--base-spacing);
+  padding-top: var(--base-spacing);
 }
 
-.advanced-tabs{
+.advanced-tabs {
   margin-bottom: var(--edge-margin);
 }
-.advanced-pane{
-    min-height: 4px;
-    margin-bottom: -4px;
-    border: 1px solid var(--border-primary);
-    margin-right: var(--edge-margin);
-    margin-left: var(--edge-margin);
-    flex: none;
+
+.advanced-pane {
+  min-height: 4px;
+  margin-bottom: -4px;
+  border: 1px solid var(--border-primary);
+  margin-right: var(--edge-margin);
+  margin-left: var(--edge-margin);
+  flex: none;
 }
 
-.advanced-pane-inner{
+.advanced-pane-inner {
   height: 100%;
   width: 100%;
   background: var(--background-primary);
@@ -117,15 +118,15 @@
   position: relative;
 }
 
-.tab-content-bg{
-    background: #000000;
-    width: 100%;
-    position: absolute;
-    z-index: 6;
-    height: 100%;
+.tab-content-bg {
+  background: #000000;
+  width: 100%;
+  position: absolute;
+  z-index: 6;
+  height: 100%;
 }
 
-.btn-expand{
+.btn-expand {
   height: 30px;
   width: 98px;
   right: -43px;
@@ -133,15 +134,17 @@
   top: -15px;
   z-index: 20;
 }
-.btn-expand-icon{
+
+.btn-expand-icon {
   height: 100%;
   width: 100%;
 }
-.btn-expanded-icon{
+
+.btn-expanded-icon {
   transform: rotate(179deg);
 }
 
-#main-r > div.tab-content-kernal > div > div:nth-child(1), #main-l > div.pane-nav > div.tab-content-nav > div > div:nth-child(1) {
+#main-r>div.tab-content-kernal>div>div:nth-child(1),
+#main-l>div.pane-nav>div.tab-content-nav>div>div:nth-child(1) {
   z-index: 10;
 }
-
