--- a/src/scss/helpers/UploadBox.scss
+++ b/src/scss/helpers/UploadBox.scss
@@ -3,146 +3,153 @@
 }
 
 // Cog wheel settings menu
-.upload-box{
+.upload-box {
   position: absolute;
   left: 0px;
   top: 0px;
   -webkit-backdrop-filter: blur(34px);
   backdrop-filter: blur(34px);
-  border:1px solid var(--border-overlay);
+  border: 1px solid var(--border-overlay);
   z-index: 20;
-  margin:4px;
+  margin: 4px;
   width: calc(100% - 9px);
   height: calc(100% - 8px);
 
   .block {
-    height:100%;
-      .drag-container-1 {
-        width: 100%;
-        height: 30px;
+    height: 100%;
+
+    .drag-container-1 {
+      width: 100%;
+      height: 30px;
+      text-align: center;
+      cursor: pointer;
+      z-index: 10 !important;
+      border-top: 1px solid var(--border-overlay);
+      display: flex;
+
+      .navItem {
+        color: var(--text-header);
         text-align: center;
-        cursor: pointer;
-        z-index:10!important;
-        border-top:1px solid var(--border-overlay);
-        display:flex;
-
-        .navItem{
-          color: var(--text-header);
-          text-align: center;
-          font-size:14pt;
-          flex-grow: 1;
-          padding-right:1px;
-          padding-left:1px;
-          border-right:1px solid var(--border-overlay);
-        }
-        .navItem:last-child{
-          border-right:0;
-        }
+        font-size: 14pt;
+        flex-grow: 1;
+        padding-right: 1px;
+        padding-left: 1px;
+        border-right: 1px solid var(--border-overlay);
       }
-      .uploader{
-        position:relative;
-        min-height: calc(100% - 32px);
-        width:100%;
-        max-width:100%;
-        height: calc(100% - 32px);
-        white-space: pre-wrap;
-        overflow-y:auto;
-        container-type: size;
 
-        #fileSelect{
-          position:absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
+      .navItem:last-child {
+        border-right: 0;
+      }
+    }
 
-          .file-upload{
-            max-width: 300px;
-            width: 100vw;
-          }
+    .uploader {
+      position: relative;
+      min-height: calc(100% - 32px);
+      width: 100%;
+      max-width: 100%;
+      height: calc(100% - 32px);
+      white-space: pre-wrap;
+      overflow-y: auto;
+      container-type: size;
 
-          input::file-selector-button {
-            text-rendering: initial;
-            font-family: "ＭＳ Ｐゴシック";
-            font-weight:400;
-            color: var(--text-primary);
-            text-decoration: none;
-            border:0;
-            background: none;
-          }
+      #fileSelect {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        .file-upload {
+          max-width: 300px;
+          width: 100vw;
         }
 
-        button{
-          border:0;
-          background:none;
-        }
-
-        #textEditor{
-          min-height:80%;
-          height: 100cqh !important;
-          max-height:100cqh !important;
-          display: flex;
-          justify-content: safe center;
-          align-items: safe center;
-
-          .ProseMirror{
-            background: var(--background-lightbox);
-            outline: 1px solid var(--border-overlay) !important;
-            width: 1394.68px;
-            max-width: calc(100cqw - 50px);
-            outline-offset: var(--box-margin);
-            padding: var(--box-margin);
-            padding-top: 0;
-            margin: 25px;
-          }
-          .tiptap{
-            position:relative;
-          }
+        input::file-selector-button {
+          text-rendering: initial;
+          font-family: 'ＭＳ Ｐゴシック';
+          font-weight: 400;
+          color: var(--text-primary);
+          text-decoration: none;
+          border: 0;
+          background: none;
         }
       }
 
-  }
+      button {
+        border: 0;
+        background: none;
+      }
 
-  .uploader{
-    width:100%;
-    container-type: size;
+      #textEditor {
+        min-height: 80%;
+        height: 100cqh !important;
+        max-height: 100cqh !important;
+        display: flex;
+        justify-content: safe center;
+        align-items: safe center;
 
-    .add-mixtape-title{
-      border-bottom: 1px solid var(--border-primary);
-      width:100%;
+        .ProseMirror {
+          background: var(--background-lightbox);
+          outline: 1px solid var(--border-overlay) !important;
+          width: 1394.68px;
+          max-width: calc(100cqw - 50px);
+          outline-offset: var(--box-margin);
+          padding: var(--box-margin);
+          padding-top: 0;
+          margin: 25px;
+        }
+
+        .tiptap {
+          position: relative;
+        }
+      }
     }
   }
-  .add-mixtape-options{
+
+  .uploader {
+    width: 100%;
+    container-type: size;
+
+    .add-mixtape-title {
+      border-bottom: 1px solid var(--border-primary);
+      width: 100%;
+    }
+  }
+
+  .add-mixtape-options {
     color: var(--text-data-title);
     width: 100%;
     display: flex;
 
-    .option{
+    .option {
       color: var(--text-data-title);
-      width:50%;
+      width: 50%;
       text-align: center;
-      font-size:13px;
-      padding:var(--base-spacing);
+      font-size: 13px;
+      padding: var(--base-spacing);
     }
-    .option:last-child{
+
+    .option:last-child {
       border-left: 1px solid var(--border-primary);
     }
   }
 }
 
-.txt{
+.txt {
   height: 100cqh;
   width: 100cqw;
   position: absolute;
   overflow: auto;
 
-  div{
-   height:100%;
-    .tiptap{
-      margin:25px;
-      height:100%;
-      overflow-y:auto;
-      p{
-        margin:0;
+  div {
+    height: 100%;
+
+    .tiptap {
+      margin: 25px;
+      height: 100%;
+      overflow-y: auto;
+
+      p {
+        margin: 0;
       }
     }
   }
